@@ -88,21 +88,67 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|outputPos
-operator|=
-literal|0
-expr_stmt|;
-name|removeAccents
-argument_list|(
+specifier|final
+name|char
+index|[]
+name|buffer
+init|=
 name|result
 operator|.
 name|termBuffer
 argument_list|()
-argument_list|,
+decl_stmt|;
+specifier|final
+name|int
+name|length
+init|=
 name|result
 operator|.
 name|termLength
 argument_list|()
+decl_stmt|;
+comment|// If no characters actually require rewriting then we
+comment|// just return token as-is:
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+specifier|final
+name|char
+name|c
+init|=
+name|buffer
+index|[
+name|i
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|c
+operator|>=
+literal|'\u00c0'
+operator|&&
+name|c
+operator|<=
+literal|'\u0178'
+condition|)
+block|{
+name|removeAccents
+argument_list|(
+name|buffer
+argument_list|,
+name|length
 argument_list|)
 expr_stmt|;
 name|result
@@ -116,6 +162,9 @@ argument_list|,
 name|outputPos
 argument_list|)
 expr_stmt|;
+break|break;
+block|}
+block|}
 return|return
 name|result
 return|;
@@ -124,70 +173,6 @@ else|else
 return|return
 literal|null
 return|;
-block|}
-DECL|method|addChar
-specifier|private
-specifier|final
-name|void
-name|addChar
-parameter_list|(
-name|char
-name|c
-parameter_list|)
-block|{
-if|if
-condition|(
-name|outputPos
-operator|==
-name|output
-operator|.
-name|length
-condition|)
-block|{
-name|char
-index|[]
-name|newArray
-init|=
-operator|new
-name|char
-index|[
-literal|2
-operator|*
-name|output
-operator|.
-name|length
-index|]
-decl_stmt|;
-name|System
-operator|.
-name|arraycopy
-argument_list|(
-name|output
-argument_list|,
-literal|0
-argument_list|,
-name|newArray
-argument_list|,
-literal|0
-argument_list|,
-name|output
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-name|output
-operator|=
-name|newArray
-expr_stmt|;
-block|}
-name|output
-index|[
-name|outputPos
-operator|++
-index|]
-operator|=
-name|c
-expr_stmt|;
 block|}
 comment|/**    * To replace accented characters in a String by unaccented equivalents.    */
 DECL|method|removeAccents
@@ -204,6 +189,52 @@ name|int
 name|length
 parameter_list|)
 block|{
+comment|// Worst-case length required:
+specifier|final
+name|int
+name|maxSizeNeeded
+init|=
+literal|2
+operator|*
+name|length
+decl_stmt|;
+name|int
+name|size
+init|=
+name|output
+operator|.
+name|length
+decl_stmt|;
+while|while
+condition|(
+name|size
+operator|<
+name|maxSizeNeeded
+condition|)
+name|size
+operator|*=
+literal|2
+expr_stmt|;
+if|if
+condition|(
+name|size
+operator|!=
+name|output
+operator|.
+name|length
+condition|)
+name|output
+operator|=
+operator|new
+name|char
+index|[
+name|size
+index|]
+expr_stmt|;
+name|outputPos
+operator|=
+literal|0
+expr_stmt|;
 name|int
 name|pos
 init|=
@@ -227,12 +258,36 @@ name|pos
 operator|++
 control|)
 block|{
-switch|switch
-condition|(
+specifier|final
+name|char
+name|c
+init|=
 name|input
 index|[
 name|pos
 index|]
+decl_stmt|;
+comment|// Quick test: if it's not in range then just keep
+comment|// current character
+if|if
+condition|(
+name|c
+operator|<
+literal|'\u00c0'
+condition|)
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
+name|c
+expr_stmt|;
+else|else
+block|{
+switch|switch
+condition|(
+name|c
 condition|)
 block|{
 case|case
@@ -259,35 +314,47 @@ case|case
 literal|'\u00C5'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'A'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00C6'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'A'
-argument_list|)
 expr_stmt|;
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'E'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00C7'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'C'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -306,10 +373,13 @@ case|case
 literal|'\u00CB'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'E'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -328,30 +398,39 @@ case|case
 literal|'\u00CF'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'I'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00D0'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'D'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00D1'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'N'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -378,40 +457,55 @@ case|case
 literal|'\u00D8'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'O'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u0152'
 case|:
 comment|// Å
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'O'
-argument_list|)
 expr_stmt|;
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'E'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00DE'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'T'
-argument_list|)
 expr_stmt|;
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'H'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -430,10 +524,13 @@ case|case
 literal|'\u00DC'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'U'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -444,10 +541,13 @@ case|case
 literal|'\u0178'
 case|:
 comment|// Å¸
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'Y'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -474,35 +574,47 @@ case|case
 literal|'\u00E5'
 case|:
 comment|// Ã¥
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'a'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00E6'
 case|:
 comment|// Ã¦
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'a'
-argument_list|)
 expr_stmt|;
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'e'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00E7'
 case|:
 comment|// Ã§
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'c'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -521,10 +633,13 @@ case|case
 literal|'\u00EB'
 case|:
 comment|// Ã«
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'e'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -543,30 +658,39 @@ case|case
 literal|'\u00EF'
 case|:
 comment|// Ã¯
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'i'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00F0'
 case|:
 comment|// Ã°
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'d'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00F1'
 case|:
 comment|// Ã±
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'n'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -593,55 +717,76 @@ case|case
 literal|'\u00F8'
 case|:
 comment|// Ã¸
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'o'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u0153'
 case|:
 comment|// Å
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'o'
-argument_list|)
 expr_stmt|;
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'e'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00DF'
 case|:
 comment|// Ã
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'s'
-argument_list|)
 expr_stmt|;
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'s'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
 literal|'\u00FE'
 case|:
 comment|// Ã¾
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'t'
-argument_list|)
 expr_stmt|;
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'h'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -660,10 +805,13 @@ case|case
 literal|'\u00FC'
 case|:
 comment|// Ã¼
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'u'
-argument_list|)
 expr_stmt|;
 break|break;
 case|case
@@ -674,22 +822,26 @@ case|case
 literal|'\u00FF'
 case|:
 comment|// Ã¿
-name|addChar
-argument_list|(
+name|output
+index|[
+name|outputPos
+operator|++
+index|]
+operator|=
 literal|'y'
-argument_list|)
 expr_stmt|;
 break|break;
 default|default :
-name|addChar
-argument_list|(
-name|input
+name|output
 index|[
-name|pos
+name|outputPos
+operator|++
 index|]
-argument_list|)
+operator|=
+name|c
 expr_stmt|;
 break|break;
+block|}
 block|}
 block|}
 block|}
